--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,7 @@
 name = "rustfmt"
 version = "0.0.1"
 authors = ["Seth Pink <sethpink@gmail.com>"]
+
+[dependencies]
+docopt = "*"
+rustc-serialize = "*"
