--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ license = "MIT"
 
 [dependencies]
 docopt = "*"
-rustc-serialize = "*"
 glob = "*"
+rustc-serialize = "*"
+syntex_syntax = "*"
+typed-arena = "*"
